// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxButton QxButton_size_medium css-1ub1wmz-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxButton QxButton_size_medium css-1br41rj-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxButton QxButton_size_medium css-8k5wf0-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxButton QxButton_size_medium css-1tnoh5b-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxButton QxButton_size_medium css-1x3b0ub-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-egfqu9-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1wor5td-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1efdbgj-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1ozmdzy-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-at7shv-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxButton QxButton_size_medium QxButton_loading css-1uy0fc1-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxButton-content css-1koh81x-QxButton-content"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_medium QxBaseButton-loader css-1705nxk-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_large css-k4gsun-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_small css-ilqipc-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxButton-content css-lmfykt-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_xSmall css-o0lqzv-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-cbtt8s-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-o22j1h-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxIconButton QxIconButton_size_medium css-5g5jcg-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxIconButton QxIconButton_size_medium css-f3gpgt-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1t4t2po-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxIconButton QxIconButton_size_medium css-1owt149-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxIconButton QxIconButton_size_medium css-10nl3em-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxIconButton QxIconButton_size_medium css-kt38zj-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1t4t2po-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-gmga1s-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-12h1fwu-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1295dfr-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-v9sp9q-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-j9s2ur-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1t4t2po-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxIconButton QxIconButton_size_medium QxIconButton_loading css-1nbcdjz-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxIconButton-icon css-rv6xp9-QxIconButton-icon"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_medium QxBaseButton-loader css-1705nxk-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_large css-1q2ichz-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1t4t2po-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small css-1grymb6-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_xSmall css-1pr1m8e-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1t4t2po-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1whr47t-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1u0c268-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;
